--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
 		
 	</header><!-- /header -->
 			
-		<footer></footer>
+		<footer>
+			
+			<ul class="ul-v">
+				<li class="ul-v__li"><a class="ul-v__li--a" href="">aezrtf</a></li>
+				<li><a href="">azerazer</a></li>
+			</ul>
+		</footer>
 			
 	</body>
 
