--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
 		<footer>
 			
 			<ul class="ul-v">
-				<li class="ul-v__li"><a class="ul-v__li--a" href="">aezrtf</a></li>
-				<li><a href="">azerazer</a></li>
+				<li class="ul-v__li">
+					<a class="ul-v__li--a" href="">next</a>
+				</li>
+
+				<li class="ul-v__li">
+					<a class="ul-v__li--a" href="">group</a>
+				</li>
+				
 			</ul>
 		</footer>
 			
