--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	</head>
 
 	<body>
+
+
 	<header id="header" class="">
 
 		
@@ -28,12 +30,14 @@
 			
 			<ul class="ul-v">
 				<li class="ul-v__li">
-					<a class="ul-v__li--a" href="">next</a>
+					<label class="ul-v__li--label" href="">next</label>
 				</li>
 
 				<li class="ul-v__li">
-					<a class="ul-v__li--a" href="">group</a>
+					<label class="ul-v__li--label" href="">prev</label>
 				</li>
+
+				
 				
 			</ul>
 		</footer>
