--- a/index.html
+++ b/index.html
@@ -21,12 +21,20 @@
 	<body>
 
 
-	<header id="header" class="">
+	<header id="header" class="header">
 
 		
 	</header><!-- /header -->
-			
-		<footer>
+			<div class="container">
+
+			<main class="main">
+				
+
+
+			</main>
+			</div>
+
+		<footer class="footer">
 			
 			<ul class="ul-v">
 				<li class="ul-v__li">
