--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="fr">
 
@@ -7,9 +7,9 @@
 		<title>Cours 05 || animation - mediaquiries </title>
 
 		<meta name="viewport" content="initial-scale=1.0">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta charset="UTF-8"/>
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta charset="UTF-8"/>
 		<link rel="stylesheet" type="text/css" href="_styles/normilize.css">
 		<link rel="stylesheet" type="text/css" href="_styles/style.css">
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
@@ -20,9 +20,13 @@
 
 	<body>
 	<header id="header" class="">
-
-		
-	</header><!-- /header -->
+        <nav class="header__nav">
+            <ul class="header__nav__ul">
+                <li class="header__nav__ul__li"><a class="header__nav__ul__li__a" href="#"></a></li>
+                <li class="header__nav__ul__li"><a class="header__nav__ul__li__a" href="#"></a></li>
+            </ul>
+        </nav>		
+	</header>
 			
 		<footer>
 			
