--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 	<body>
 	<header id="header" class="">
+        <p class="header__p">Groupes</p>
         <nav class="header__nav">
             <ul class="header__nav__ul">
                 <li class="header__nav__ul__li"><a class="header__nav__ul__li__a" href="#"></a></li>
