filtre + page profil and group

--- a/index.html
+++ b/index.html
@@ -28,8 +28,18 @@
 	</header><!-- /header -->
 			<div class="container">
 
+			<input type="checkbox" id="group">
+			<input type="checkbox"  id="profil">
+
+			<div class="page_group">
+				ertzertzert
+			</div>
+			<div class="page_profil">
+				zertzertezrt
+			</div>
+
 			<main class="main">
-			<ul class="ul-h main__cat">
+			<ul class="ul-h ">
 
 				
 				<input type="radio" name="cat"  id="my_group">
@@ -126,11 +136,11 @@
 
 			<ul class="ul-v">
 				<li class="ul-v__li col-2">
-					<label class="ul-v__li--label">next</label>
+					<label for="group" class="ul-v__li--label">group</label>
 				</li>
 
 				<li class="ul-v__li col-2">
-					<label class="ul-v__li--label">prev</label>
+					<label for="profil" class="ul-v__li--label">profil</label>
 				</li>
 
 				
