--- a/index.html
+++ b/index.html
@@ -23,9 +23,18 @@
 
 
 	<header id="header" class="header">
-
-		
-	</header><!-- /header -->
+		<div class="header__div">
+			<a href="#" class="header__div__a back fa fa-chevron-left"></a>
+			<p class="header__div__p">Groupes</p>
+		</div>
+		<nav class="header__nav">
+			<ul class="header__nav__ul">
+				<li class="header__nav__ul__li search"><a href="#" class="header__nav__ul__li__a fa fa-search"></a></li>
+				<li class="header__nav__ul__li add"><a href="#" class="header__nav__ul__li__a fa fa-plus"></a></li>
+			</ul>
+		</nav>
+	</header>
+	
 			<div class="container">
 
 			<input type="checkbox" id="group">
