--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 		<link rel="stylesheet" type="text/css" href="_styles/normilize.css">
 		<link rel="stylesheet" type="text/css" href="_styles/style.css">
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-		
-		
+
 		
 	</head>
 
@@ -24,12 +23,16 @@
 
 	<header id="header" class="header">
 		<div class="header__div">
-			<a href="#" class="header__div__a back fa fa-chevron-left"></a>
-			<p class="header__div__p">Groupes</p>
+			<a href="#" class="header__div__a back ">
+				<i class="fa fa-chevron-left"></i>
+			</a>
+			<span class="header__div__span">Groupes</span>
 		</div>
 		<nav class="header__nav">
 			<ul class="header__nav__ul">
-				<li class="header__nav__ul__li search"><a href="#" class="header__nav__ul__li__a fa fa-search"></a></li>
+				<li class="header__nav__ul__li search"><a href="#" class="header__nav__ul__li__a fa fa-search">
+					
+				</a></li>
 				<li class="header__nav__ul__li add"><a href="#" class="header__nav__ul__li__a fa fa-plus"></a></li>
 			</ul>
 		</nav>
