--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 		<link rel="stylesheet" type="text/css" href="_styles/normilize.css">
 		<link rel="stylesheet" type="text/css" href="_styles/style.css">
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+		<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+
+		<script src="_js/js.js" type="text/javascript" charset="utf-8" async defer></script>
 
 		
 	</head>
@@ -148,14 +151,12 @@
 
 			<ul class="ul-v">
 				<li class="ul-v__li col-2">
-					<label for="group" class="ul-v__li--label">group</label>
+					<label for="group" class="ul-v__li--label" id="button_group">group</label>
 				</li>
 
 				<li class="ul-v__li col-2">
-					<label for="profil" class="ul-v__li--label">profil</label>
+					<label for="profil" class="ul-v__li--label" id="button_profil">profil</label>
 				</li>
-
-				
 				
 			</ul>
 		</footer>
