--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 			</div>
 			<div class="container">
 
-			<div class="page_search"></div>
+			<div class="page_search">
+				zegergregerg
+			</div>
 
 			<main class="main">
 			<ul class="ul-h ">
