Let to be fixed

--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
 		</div>
 		<nav class="header__nav">
 			<ul class="header__nav__ul">
-				<li class="header__nav__ul__li search"><a href="#" class="header__nav__ul__li__a fa fa-search">
-					
-				</a></li>
-				<li class="header__nav__ul__li add"><a href="#" class="header__nav__ul__li__a fa fa-plus"></a></li>
+				<li class="header__nav__ul__li search"><label for="searchT" class="header__nav__ul__li__a fa fa-search">
+				</label></li>
+				<li class="header__nav__ul__li add"><label  class="header__nav__ul__li__a fa fa-plus"></label></li>
 			</ul>
 		</nav>
 	</header>
@@ -52,6 +51,7 @@
 				zertzertezrt
 			</div>
 			<div class="container">
+			<input type="checkbox" id="searchT">
 
 			<div class="page_search">
 				zegergregerg
