Sortit du container

--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
 			<div class="page_profil">
 				zertzertezrt
 			</div>
-			<div class="container">
 			<input type="checkbox" id="searchT">
 
 			<div class="page_search">
 				zegergregerg
-			</div>
+			</div>	
 
+			<!--CONTAINER-->
+			<div class="container">
 			<main class="main">
 			<ul class="ul-h ">
 
