Manque les délais d'animation

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 		<nav class="header__nav">
 			<ul class="header__nav__ul">
-				<li class="header__nav__ul__li search"><label for="searchT" class="header__nav__ul__li__a fa fa-search">
+				<li class="header__nav__ul__li search"><label for="searchT" id="button_search" class="header__nav__ul__li__a fa fa-search">
 				</label></li>
 				<li class="header__nav__ul__li add"><label  class="header__nav__ul__li__a fa fa-plus"></label></li>
 			</ul>
