--- a/index.html
+++ b/index.html
@@ -43,7 +43,33 @@
 
 		<input type="checkbox" id="group">
 			<input type="checkbox"  id="profil">
+			
+			<div class="page_login">
 
+				<div class="logo">
+					<img class="logo__img" src="http://placehold.it/100x100" alt="logo_ara">
+					<small class="logo__small" >The best app</small>
+
+					<form class="logo__form" action="">
+					
+					<div class="form__div">
+					<label for="name">nom</label>
+					<input id="name" type="text">
+					</div>
+					<div class="form__div">
+					<label for="pwd">code</label>
+					<input id="pwd" type="passeword">
+					</div>
+
+
+					<div class="form__div">
+					<input id="submit" value="connect" type="submit">
+					</div>
+					</form>
+
+					<a href="#">testing app first</a>
+				</div>
+			</div>
 			<div class="page_group">
 				ertzertzert
 			</div>
