--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 					<input id="submit" value="connect" type="submit">
 					</div>
 					</form>
-
-					<a href="#">testing app first</a>
 				</div>
+
+				<a class="logo__a" href="#">testing app first</a>
 			</div>
 			<div class="page_group">
 				ertzertzert
