Revert "text span"
This reverts commit a70670c03ad551992f55cda931121fca0052846f.

Conflicts:
	_js/js.js

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 					<input id="submit" value="connect" type="submit">
 					</div>
 					</form>
-				</div>
 
-				<a class="logo__a" href="#">testing app first</a>
+					<a href="#">testing app first</a>
+				</div>
 			</div>
 			<div class="page_group">
 				ertzertzert
