--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<a href="#" class="header__div__a back ">
 				<i class="fa fa-chevron-left"></i>
 			</a>
-			<span class="header__div__span">Groupes</span>
+			<span class="header__div__span">Home</span>
 		</div>
 		<nav class="header__nav">
 			<ul class="header__nav__ul">
