--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					</div>
 					<div class="form__div">
 					<label for="pwd">code</label>
-					<input id="pwd" type="passeword">
+					<input id="pwd" type="password">
 					</div>
 
 
