Tentative fleches search bar

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                 <p>Je suis en...</p>	
                 <div class="search__year">
                     <div class="search__arrowBox">
-                        <i class="search__arrowUp fa fa-caret-down"></i>
-                        <i class="search__arrowDown fa fa-caret-up"></i>
+                        <a href="#" class="search__arrowUp fa fa-chevron-down"></a>
+                        <a href="#" class="search__arrowDown fa fa-chevron-up"></a>
                     </div>
                 </div>
                 <div class="selectContainer">
