Search Page en cours

--- a/index.html
+++ b/index.html
@@ -69,12 +69,23 @@
 			<input type="checkbox" id="searchT">
 			<div class="page_search">	
                 <p>Je suis en...</p>	
-                <div class="search__year">
-                    <div class="search__arrowBox">
-                        <a href="#" class="search__arrowUp fa fa-chevron-down"></a>
-                        <a href="#" class="search__arrowDown fa fa-chevron-up"></a>
-                    </div>
-                </div>
+
+                <select>
+                    <option>Choisit ton année</option>
+                    <option>1ere année</option>
+                    <option>2eme année</option>
+                    <option>3eme année</option>
+                </select>
+
+                <select>
+                    <option>Choisit ta section</option>
+                    <option>DWM</option>
+                    <option>JV</option>
+                    <option>2D</option>
+                    <option>3D</option>
+                    <option>Communication graphique</option>
+                </select>
+
                 <div class="selectContainer">
                 <button class="selectUp">
                     <div class="arrowUp"></div>
