--- a/index.html
+++ b/index.html
@@ -39,41 +39,41 @@
                 <div class="list_cour">
                 
 				<ul class="ul-h" >
-					<li class="ul-h__li">
-						<a class="ul-h__li--a" href="	">a</a>
+					<li class="ul-h__li type_cour">
+						<a class="ul-h__li--a" href="#">anglais</a>
 					</li>
-					<li class="ul-h__li">
-						<a class="ul-h__li--a" href="	">a</a>
+					<li class="ul-h__li type_cour">
+						<a class="ul-h__li--a" href="	">RTI</a>
 					</li>
-					<li class="ul-h__li">
-						<a class="ul-h__li--a" href="	">a</a>
+					<li class="ul-h__li type_cour">
+						<a class="ul-h__li--a" href="	">AI</a>
 					</li>
-					<li class="ul-h__li">
-						<a class="ul-h__li--a" href="	">a</a>
+					<li class="ul-h__li type_cour">
+						<a class="ul-h__li--a" href="	">PH</a>
 					</li>
-					<li class="ul-h__li">
-						<a class="ul-h__li--a" href="	">a</a>
+					<li class="ul-h__li type_cour">
+						<a class="ul-h__li--a" href="	">Psychologie</a>
 					</li>
-					<li class="ul-h__li">
-						<a class="ul-h__li--a" href="	">a</a>
+					<li class="ul-h__li type_cour">
+						<a class="ul-h__li--a" href="">Math</a>
 					</li>
-					<li class="ul-h__li">
-						<a class="ul-h__li--a" href="	">a</a>
+					<li class="ul-h__li type_cour">
+						<a class="ul-h__li--a" href="#">Droit d'auteur</a>
 					</li>
-					<li class="ul-h__li">
-						<a class="ul-h__li--a" href="	">a</a>
+					<li class="ul-h__li type_cour">
+						<a class="ul-h__li--a" href="	">atanomie</a>
 					</li>
-					<li class="ul-h__li">
-						<a class="ul-h__li--a" href="	">a</a>
+					<li class="ul-h__li type_cour">
+						<a class="ul-h__li--a" href="	">Ergonomie</a>
 					</li>
-					<li class="ul-h__li">
-						<a class="ul-h__li--a" href="	">a</a>
+					<li class="ul-h__li type_cour">
+						<a class="ul-h__li--a" href="	">Dessin</a>
 					</li>
-					<li class="ul-h__li">
-						<a class="ul-h__li--a" href="	">a</a>
+					<li class="ul-h__li type_cour">
+						<a class="ul-h__li--a" href="	">Dsign</a>
 					</li>
-					<li class="ul-h__li">
-						<a class="ul-h__li--a" href="	">a</a>
+					<li class="ul-h__li type_cour">
+						<a class="ul-h__li--a" href="	">autres</a>
 					</li>
 
 				</ul>
@@ -150,6 +150,7 @@
 
          <input type="radio" name="cat"   id="all">
 			
+
 
 				<li class="ul-h__li cat cat_a">
 					<a class="ul-h__li--a " href="#">cat</a>
